FIX: Add overflow hidden to map section to stop horizontal scroll

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -126,6 +126,7 @@ header {
     width: 100%;
     margin-top: 15px;
     border: none;
+    overflow: hidden;
 }
 
 /* Footer section */
@@ -302,4 +303,3 @@ footer {
 }
 
 /* Mediaqueries */
-
